Small update to package.json

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "./hamburger-basement",
   "repository": "https://github.com/arnemart/hamburger-button.git",
   "keywords": [
+    "hamburger basement",
     "react",
     "topcoat"
   ],
