--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "topcoat"
   ],
   "devDependencies": {
-    "watchify": "~0.6.1"
+    "watchify": "0.8.1"
   },
   "dependencies": {
-    "react": "~0.9.0",
-    "react-topcoat": "~0.1.2"
+    "react": "~0.10.0",
+    "react-topcoat": "~0.1.5"
   },
   "scripts": {
     "watch": "watchify -vo test-built.js test.js"
